Add IconStylesheets class as a registry for platform icons